# signed-language-translator

./: README.md  generate_python_package.py  ~$ Initial Setup - Github.docx  🔧 Initial Setup - Github.docx
signedlang_api/: README.md  pyproject.toml  signed-language-translation-api.yml
signedlang_api/signedlang_api/: main.py
signedlang_api/signedlang_api/models/: feedback.py  gesture.py  speech.py  translation.py
