[project]
name = "signedlang_api"
version = "0.1.0"
description = "RESTful APIs for translating between signed gestures, speech, and video."
authors = [{ name = "Deepa Veerabhadrachar", email = "deepav2008@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["fastapi", "uvicorn", "pyyaml"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"